--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tago_movable_box",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "This is for movable box",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
