--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is for movable box",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Satoshi Tagomori",
   "license": "MIT",
@@ -12,5 +12,13 @@
     "@types/node": "^22.5.0",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
